--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@ title                    : "Haozhe XU"
 title_separator          : "-"
 name                     : &name "Haozhe XU"
 description              : &description "Your Name's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://haozhexu.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+url                      : https://xuhaozhe0204.github.io/ # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "XuHaozhe0204/haozhexu.github.io"
+repository               : "XuHaozhe0204/xuhaozhe0204.github.io/"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
