--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "XuHaozhe0204/XuHaozhe0204.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "/images/111.png"
+  avatar           : "XuHaozhe0204/images/111.png"
   name             : "Haozhe XU"
   pronouns         : # example: "she/her"  
   bio              : "A fourth-year undergraduate student whose research focuses on the intersection between AI and business."
@@ -31,7 +31,6 @@ author:
   employer         : "Xi'an Jiaotong University"
   uri              : # URL
   email            : "xuhaozhe@stu.xjtu.edu.cn" 
-  github           : "https://github.com/XuHaozhe0204"
   
  
 
