--- a/_config.yml
+++ b/_config.yml
@@ -23,14 +23,14 @@ repository               : "XuHaozhe0204/XuHaozhe0204.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "XuHaozhe0204.github.io/images/111.png"
+  name             : "Haozhe XU"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "A fourth-year undergraduate student whose research focuses on the intersection between AI and business"
+  location         : "Xi'an, Shaanxi, Mainland China"
+  employer         : "Xi'an Jiaotong University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "xuhaozhe@stu.xjtu.edu.cn" 
 
   # Academic websites
   academia         : # URL
