--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ publication_category:
   books:
     title: 'Books'
   manuscripts:
-    title: 'Journal Articles'    
+    title: 'Working Papers & Works in Progress'    
   conferences:
     title: 'Conference Papers'
 
