--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "My Advisors"
+  - title: "Researchs"
     url: /portfolio/
         
   - title: "Blog Posts"
