--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,17 +11,17 @@ main:
   #- title: "Research"
   #  url: /publications/
 
-  - title: "Awards"
-    url: /talks/    
+  #- title: "Awards"
+  #  url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  #- title: "Teaching"
+  #  url: /teaching/    
     
   - title: "Researchs"
     url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  #- title: "Blog Posts"
+  #  url: /year-archive/
     
   - title: "CV"
     url: /cv/
@@ -29,5 +29,5 @@ main:
   #- title: "CV"
   #   url: /cv-json/
     
-  - title: "Guide"
-    url: /markdown/
+  #- title: "Guide"
+  #  url: /markdown/
